--- a/sw/CMakeLists.txt
+++ b/sw/CMakeLists.txt
@@ -241,6 +241,7 @@ function(build_sb TARGET_NAME MULTIFW)
     config_target(${TARGET_NAME} ${MULTIFW})
     pico_set_program_name(${TARGET_NAME} "picogus-sb")
     target_sources(${TARGET_NAME} PRIVATE
+        volctrl.cpp
         sbdsp.cpp
         sbplay.cpp
         isa_dma.c
@@ -263,7 +264,10 @@ function(build_adlib TARGET_NAME MULTIFW)
     set(SOUND_OPL TRUE)
     config_target(${TARGET_NAME} ${MULTIFW})
     pico_set_program_name(${TARGET_NAME} "picogus-adlib")
-    target_sources(${TARGET_NAME} PRIVATE sbplay.cpp)    
+    target_sources(${TARGET_NAME} PRIVATE 
+        volctrl.cpp
+        sbplay.cpp
+    )    
 endfunction()
 
 ################################################################################
@@ -312,7 +316,10 @@ function(build_usb TARGET_NAME MULTIFW)
     target_compile_definitions(${TARGET_NAME} PRIVATE
         USB_ONLY=1
     )
-    target_sources(${TARGET_NAME} PRIVATE usbplay.cpp)
+    target_sources(${TARGET_NAME} PRIVATE 
+        volctrl.cpp
+        usbplay.cpp
+    )
 endfunction()
 
 
